// Package fork åˆ†å‰æ£€æµ‹å®ç°
package fork

import (
	"bytes"
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
)

// ============================================================================
//                              åˆ†å‰æ£€æµ‹å®ç°
// ============================================================================

// detectFork æ£€æµ‹æ˜¯å¦å­˜åœ¨åˆ†å‰
//
// ğŸ¯ **åˆ†å‰æ£€æµ‹æ ¸å¿ƒé€»è¾‘**
//
// æ£€æµ‹æ–¹æ³•ï¼š
// 1. è·å–åŒºå—çš„çˆ¶å“ˆå¸Œ
// 2. è·å–å½“å‰ä¸»é“¾åœ¨è¯¥é«˜åº¦çš„åŒºå—
// 3. æ¯”è¾ƒçˆ¶å“ˆå¸Œæ˜¯å¦åŒ¹é…
// 4. å¦‚æœä¸åŒ¹é…ï¼Œå‘å‰å›æº¯æŸ¥æ‰¾åˆ†å‰ç‚¹
//
// è¿”å›ï¼š
//   - isFork: æ˜¯å¦æ˜¯åˆ†å‰
//   - forkHeight: åˆ†å‰ç‚¹é«˜åº¦
//   - error: æ£€æµ‹é”™è¯¯
func (s *Service) detectFork(ctx context.Context, block *core.Block) (bool, uint64, error) {
	if block == nil || block.Header == nil {
		return false, 0, fmt.Errorf("æ— æ•ˆçš„åŒºå—")
	}

	blockHeight := block.Header.Height
	parentHash := block.Header.PreviousHash

	if s.logger != nil {
		s.logger.Debugf("æ£€æµ‹åˆ†å‰: åŒºå—é«˜åº¦=%d, çˆ¶å“ˆå¸Œ=%x",
			blockHeight, parentHash[:min(8, len(parentHash))])
	}

	// 1. è·å–å½“å‰é“¾ä¿¡æ¯
	chainInfo, err := s.queryService.GetChainInfo(ctx)
	if err != nil {
		return false, 0, fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	currentHeight := chainInfo.Height

	// 2. å¦‚æœæ–°åŒºå—é«˜åº¦å°äºç­‰äºå½“å‰é«˜åº¦ï¼Œå¯èƒ½æ˜¯åˆ†å‰
	if blockHeight <= currentHeight {
		// è·å–ä¸»é“¾åœ¨è¯¥é«˜åº¦-1çš„åŒºå—å“ˆå¸Œ
		if blockHeight == 0 {
			// åˆ›ä¸–åŒºå—ä¸ä¼šæœ‰åˆ†å‰
			return false, 0, nil
		}

		// è·å–ä¸»é“¾åœ¨ blockHeight-1 çš„åŒºå—
		mainChainBlock, err := s.queryService.GetBlockByHeight(ctx, blockHeight-1)
		if err != nil {
			return false, 0, fmt.Errorf("è·å–ä¸»é“¾åŒºå—å¤±è´¥: %w", err)
		}

		// è®¡ç®—ä¸»é“¾åŒºå—å“ˆå¸Œ
		mainChainBlockHash, err := s.calculateBlockHash(ctx, mainChainBlock.Header)
		if err != nil {
			return false, 0, fmt.Errorf("è®¡ç®—ä¸»é“¾åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
		}

		// æ¯”è¾ƒçˆ¶å“ˆå¸Œ
		if !bytes.Equal(mainChainBlockHash, parentHash) {
			// å‘ç°åˆ†å‰
			if s.logger != nil {
				s.logger.Infof("ğŸ” æ£€æµ‹åˆ°åˆ†å‰: ä¸»é“¾å—å“ˆå¸Œ=%x, æ–°å—çˆ¶å“ˆå¸Œ=%x",
					mainChainBlockHash[:min(8, len(mainChainBlockHash))], parentHash[:min(8, len(parentHash))])
			}

			// å‘å‰å›æº¯æŸ¥æ‰¾åˆ†å‰ç‚¹
			forkHeight, err := s.findForkPoint(ctx, block)
			if err != nil {
				return true, blockHeight - 1, fmt.Errorf("æŸ¥æ‰¾åˆ†å‰ç‚¹å¤±è´¥: %w", err)
			}

			return true, forkHeight, nil
		}
	}

	// 3. å¦‚æœæ–°åŒºå—æ˜¯å½“å‰é“¾çš„ç›´æ¥åç»§ï¼Œä¸æ˜¯åˆ†å‰
	if blockHeight == currentHeight+1 {
		// è·å–å½“å‰é“¾å°–
		bestBlock, err := s.queryService.GetBlockByHeight(ctx, currentHeight)
		if err != nil {
			return false, 0, fmt.Errorf("è·å–é“¾å°–åŒºå—å¤±è´¥: %w", err)
		}

		// è®¡ç®—é“¾å°–åŒºå—å“ˆå¸Œ
		bestBlockHash, err := s.calculateBlockHash(ctx, bestBlock.Header)
		if err != nil {
			return false, 0, fmt.Errorf("è®¡ç®—é“¾å°–åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
		}

		// æ£€æŸ¥çˆ¶å“ˆå¸Œæ˜¯å¦åŒ¹é…
		if bytes.Equal(bestBlockHash, parentHash) {
			// æ­£å¸¸çš„ä¸‹ä¸€ä¸ªåŒºå—ï¼Œä¸æ˜¯åˆ†å‰
			if s.logger != nil {
				s.logger.Debugf("âœ… æ­£å¸¸åç»§åŒºå—: é«˜åº¦=%d", blockHeight)
			}
			return false, 0, nil
		}

		// çˆ¶å“ˆå¸Œä¸åŒ¹é…ï¼Œè¿™æ˜¯åˆ†å‰
		if s.logger != nil {
			s.logger.Infof("ğŸ” æ£€æµ‹åˆ°åˆ†å‰ï¼ˆç›´æ¥åç»§ï¼‰: é“¾å°–å“ˆå¸Œ=%x, æ–°å—çˆ¶å“ˆå¸Œ=%x",
				bestBlockHash[:min(8, len(bestBlockHash))], parentHash[:min(8, len(parentHash))])
		}

		// å‘å‰å›æº¯æŸ¥æ‰¾åˆ†å‰ç‚¹
		forkHeight, err := s.findForkPoint(ctx, block)
		if err != nil {
			return true, currentHeight, fmt.Errorf("æŸ¥æ‰¾åˆ†å‰ç‚¹å¤±è´¥: %w", err)
		}

		return true, forkHeight, nil
	}

	// 4. å…¶ä»–æƒ…å†µï¼šæ–°åŒºå—é«˜åº¦è¿œå¤§äºå½“å‰é«˜åº¦ï¼Œå¯èƒ½æ˜¯ç¼ºå¤±åŒºå—
	if blockHeight > currentHeight+1 {
		if s.logger != nil {
			s.logger.Warnf("âš ï¸ åŒºå—é«˜åº¦è·³è·ƒ: å½“å‰=%d, æ–°åŒºå—=%d", currentHeight, blockHeight)
		}
		return false, 0, fmt.Errorf("åŒºå—é«˜åº¦ä¸è¿ç»­: å½“å‰=%d, æ–°åŒºå—=%d", currentHeight, blockHeight)
	}

	return false, 0, nil
}

// ============================================================================
//                              åˆ†å‰ç‚¹æŸ¥æ‰¾
// ============================================================================

// findForkPoint æŸ¥æ‰¾åˆ†å‰ç‚¹
//
// ğŸ” **å‘å‰å›æº¯æŸ¥æ‰¾å…±åŒç¥–å…ˆ**
//
// ç®—æ³•ï¼š
// 1. ä»åˆ†å‰åŒºå—çš„çˆ¶åŒºå—å¼€å§‹
// 2. å‘å‰å›æº¯ï¼Œç›´åˆ°æ‰¾åˆ°ä¸»é“¾ä¸Šå­˜åœ¨çš„åŒºå—
// 3. è¯¥åŒºå—çš„é«˜åº¦å³ä¸ºåˆ†å‰ç‚¹
//
// è¿”å›ï¼š
//   - åˆ†å‰ç‚¹é«˜åº¦
//   - error: æŸ¥æ‰¾é”™è¯¯
func (s *Service) findForkPoint(ctx context.Context, forkBlock *core.Block) (uint64, error) {
	if forkBlock == nil || forkBlock.Header == nil {
		return 0, fmt.Errorf("æ— æ•ˆçš„åˆ†å‰åŒºå—")
	}

	// å…±åŒç¥–å…ˆæŸ¥æ‰¾çš„æ­£ç¡®è¯­ä¹‰ï¼š
	// - æˆ‘ä»¬è¦æ‰¾åˆ°â€œæœ€é«˜çš„å…±åŒç¥–å…ˆåŒºå—é«˜åº¦â€ï¼ˆmain chain ä¸ fork chain åœ¨è¯¥é«˜åº¦ hash ç›¸åŒï¼‰
	// - å¿…é¡»æ²¿ fork é“¾å‘å‰ï¼ˆçˆ¶å“ˆå¸Œï¼‰é€æ­¥å›æº¯ï¼Œä¸èƒ½ç”¨â€œä¸»é“¾ previousHashâ€å»ä¼ªæ¨å¯¼ fork é“¾ï¼ˆé‚£æ˜¯é”™è¯¯çš„ï¼‰
	//
	// åœ¨â€œé sync v2 è‡ªåŠ¨ reorgâ€åœºæ™¯ï¼ˆä¾‹å¦‚æ”¶åˆ°åˆ†å‰åŒºå—äº‹ä»¶åå†å¤„ç†ï¼‰ä¸‹ï¼š
	// - æœŸæœ› fork é“¾ä¸Šçš„ç¥–å…ˆå—èƒ½å¤Ÿé€šè¿‡ GetBlockByHash ä»æœ¬åœ°å­˜å‚¨å–å›
	// - è‹¥ç¼ºå¤±ç¥–å…ˆå—ï¼Œéœ€è¦è§¦å‘åŒæ­¥æ¥è¡¥é½ï¼ˆå¦åˆ™æ— æ³•ä¸¥è°¨å®šä½å…±åŒç¥–å…ˆï¼‰
	currentHash := forkBlock.Header.PreviousHash
	currentHeight := forkBlock.Header.Height - 1

	if s.logger != nil {
		s.logger.Debugf("æŸ¥æ‰¾åˆ†å‰ç‚¹: ä»é«˜åº¦=%d å¼€å§‹", currentHeight)
	}

	// å‘å‰å›æº¯ï¼Œæœ€å¤šå›æº¯ N ä¸ªåŒºå—ï¼ˆä»é…ç½®è·å–ï¼Œé»˜è®¤ 100ï¼‰
	maxBacktrack := s.getMaxForkBacktrack()
	for i := 0; i < maxBacktrack; i++ {
		// 1) å–ä¸»é“¾åŒé«˜åº¦å—å¹¶è®¡ç®— hash
		mainChainBlock, err := s.queryService.GetBlockByHeight(ctx, currentHeight)
		if err != nil || mainChainBlock == nil || mainChainBlock.Header == nil {
			// ä¸»é“¾è¯¥é«˜åº¦ä¸å­˜åœ¨ï¼šè¯´æ˜æœ¬åœ°ä¸»é“¾ä¸è¶³æˆ–ç´¢å¼•æŸåï¼Œæ— æ³•ç¡®å®šå…±åŒç¥–å…ˆ
			return 0, fmt.Errorf("ä¸»é“¾ç¼ºå¤±é«˜åº¦=%d çš„åŒºå—ï¼Œæ— æ³•å®šä½å…±åŒç¥–å…ˆ: %w", currentHeight, err)
		}
		mainHash, err := s.calculateBlockHash(ctx, mainChainBlock.Header)
		if err != nil {
			return 0, fmt.Errorf("è®¡ç®—ä¸»é“¾åŒºå—å“ˆå¸Œå¤±è´¥ (height=%d): %w", currentHeight, err)
		}

		// 2) å¯¹æ¯”ï¼šfork é“¾å½“å‰å€™é€‰ hash æ˜¯å¦ä¸ä¸»é“¾ä¸€è‡´
		if bytes.Equal(mainHash, currentHash) {
			if s.logger != nil {
				s.logger.Infof("âœ… æ‰¾åˆ°åˆ†å‰ç‚¹(å…±åŒç¥–å…ˆ): é«˜åº¦=%d, å“ˆå¸Œ=%x",
					currentHeight, mainHash[:min(8, len(mainHash))])
			}
			return currentHeight, nil
		}

		// 3) ç»§ç»­æ²¿ fork é“¾å›æº¯ï¼šå¿…é¡»ä» fork é“¾ä¸ŠæŒ‰ hash å–å›çˆ¶å—ï¼Œå†è¯»å–å…¶ PreviousHash
		//    å¦‚æœ fork é“¾ç¥–å…ˆä¸åœ¨æœ¬åœ°å­˜å‚¨ï¼Œåˆ™æ— æ³•ä¸¥è°¨å®šä½å…±åŒç¥–å…ˆï¼ˆåº”è§¦å‘åŒæ­¥è¡¥é½ï¼‰ã€‚
		forkAncestor, err := s.queryService.GetBlockByHash(ctx, currentHash)
		if err != nil || forkAncestor == nil || forkAncestor.Header == nil {
			if s.logger != nil {
				s.logger.Warnf("âš ï¸ æ— æ³•ä»æœ¬åœ°æŒ‰ hash è·å– fork ç¥–å…ˆå—: height=%d hash=%x err=%vï¼ˆéœ€è¦åŒæ­¥è¡¥é½ç¥–å…ˆå—åå†å®šä½åˆ†å‰ç‚¹ï¼‰",
					currentHeight, currentHash[:min(8, len(currentHash))], err)
			}
			return 0, fmt.Errorf("fork ç¥–å…ˆåŒºå—ç¼ºå¤±(hash=%x height~%d)ï¼Œæ— æ³•å®šä½åˆ†å‰ç‚¹ï¼Œè¯·å…ˆåŒæ­¥è¡¥é½: %w",
				currentHash[:min(8, len(currentHash))], currentHeight, err)
		}
		// å®‰å…¨æ€§ï¼šå°½é‡ä½¿ç”¨ forkAncestor.Header.Height æ›´æ–° currentHeightï¼Œé¿å…ä»…é å¤–éƒ¨ä¼ å…¥é«˜åº¦æ¨æ¼”
		if forkAncestor.Header.Height == 0 {
			// å›æº¯åˆ°åˆ›ä¸–åŒºå—ï¼šå…±åŒç¥–å…ˆåªèƒ½æ˜¯ 0
			return 0, nil
		}
		currentHeight = forkAncestor.Header.Height - 1
		currentHash = forkAncestor.Header.PreviousHash
	}

	// å›æº¯æ¬¡æ•°è¶…è¿‡é™åˆ¶
	if s.logger != nil {
		s.logger.Errorf("âŒ æ— æ³•æ‰¾åˆ°åˆ†å‰ç‚¹ï¼šå›æº¯æ¬¡æ•°è¶…è¿‡é™åˆ¶ (%d å±‚)ï¼Œå½“å‰é…ç½® blockchain.sync.advanced.auto_reorg_max_depth=%dã€‚"+
			"è¿™é€šå¸¸æ„å‘³ç€å‘ç”Ÿäº†å¼‚å¸¸æ·±åº¦çš„åˆ†å‰æˆ–é•¿æ—¶é—´ç½‘ç»œåˆ†åŒºï¼Œå»ºè®®ï¼š"+
			"1) æ£€æŸ¥èŠ‚ç‚¹ä¸ä¸Šæ¸¸çš„ç½‘ç»œè¿æ¥ï¼›2) è¯„ä¼°æ˜¯å¦éœ€è¦ä¸´æ—¶è°ƒé«˜ auto_reorg_max_depthï¼›3) å¿…è¦æ—¶æ‰§è¡Œç¦»çº¿é‡ç»„/é‡å»ºèŠ‚ç‚¹ã€‚",
			maxBacktrack, s.getMaxForkBacktrack())
	}

	return 0, fmt.Errorf("æ— æ³•æ‰¾åˆ°åˆ†å‰ç‚¹ï¼Œå›æº¯æ¬¡æ•°è¶…è¿‡é™åˆ¶: %dï¼ˆå— blockchain.sync.advanced.auto_reorg_max_depth é™åˆ¶ï¼‰", maxBacktrack)
}

// ============================================================================
//                              è¾…åŠ©å‡½æ•°
// ============================================================================

// min è¿”å›ä¸¤ä¸ªæ•´æ•°ä¸­çš„è¾ƒå°å€¼
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}

// calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **åŒºå—å“ˆå¸Œè®¡ç®—è¾…åŠ©æ–¹æ³•**
//
// å¤ç”¨ block/shared/hash.go çš„ CalculateBlockHash å‡½æ•°
//
// å‚æ•°ï¼š
//   - header: åŒºå—å¤´
//
// è¿”å›ï¼š
//   - []byte: åŒºå—å“ˆå¸Œ
//   - error: è®¡ç®—é”™è¯¯

// calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆè¾…åŠ©æ–¹æ³•ï¼Œä½¿ç”¨ gRPC æœåŠ¡ï¼‰
func (s *Service) calculateBlockHash(ctx context.Context, header *core.BlockHeader) ([]byte, error) {
	if header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸ºç©º")
	}
	if s.blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	// æ„å»ºåŒºå—ï¼ˆåªæœ‰Headerï¼‰
	block := &core.Block{
		Header: header,
	}

	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	return resp.Hash, nil
}
