// start_aggregation.go
// å¯åŠ¨èšåˆè½®æ¬¡çš„ä¸šåŠ¡é€»è¾‘å®ç°
//
// æ ¸å¿ƒä¸šåŠ¡åŠŸèƒ½ï¼š
// 1. å¯åŠ¨æŒ‡å®šé«˜åº¦çš„èšåˆè½®æ¬¡å¤„ç†
// 2. æ£€æŸ¥èšåˆèŠ‚ç‚¹èµ„æ ¼
// 3. åˆå§‹åŒ–èšåˆæµç¨‹çŠ¶æ€
//
// ä½œè€…ï¼šWESå¼€å‘å›¢é˜Ÿ
// åˆ›å»ºæ—¶é—´ï¼š2025-09-13

package controller

import (
	"context"
	"errors"
	"fmt"
	"time"

	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	"github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	netiface "github.com/weisyn/v1/pkg/interfaces/network"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// aggregationStarter èšåˆè½®æ¬¡å¯åŠ¨å™¨
type aggregationStarter struct {
	logger       log.Logger
	stateManager interfaces.AggregatorStateManager
	// æ·»åŠ ç¼–æ’æ‰€éœ€çš„å­ç»„ä»¶
	election           interfaces.AggregatorElection
	candidateCollector interfaces.CandidateCollector
	decisionCalculator interfaces.DecisionCalculator
	blockSelector      interfaces.BlockSelector
	distanceSelector   interfaces.DistanceSelector // è·ç¦»é€‰æ‹©å™¨
	resultDistributor  interfaces.ResultDistributor
	// æ–°å¢ç½‘ç»œå’Œå€™é€‰æ± ä¾èµ–
	candidatePool  mempool.CandidatePool
	networkService netiface.Network
	host           node.Host
	// æ–°å¢Kæ¡¶ç®¡ç†å™¨ä¾èµ–ï¼Œç”¨äºæ¸…ç†ä¸å…¼å®¹çš„å¤–éƒ¨èŠ‚ç‚¹
	routingTableManager kademlia.RoutingTableManager
}

// newAggregationStarter åˆ›å»ºèšåˆè½®æ¬¡å¯åŠ¨å™¨
func newAggregationStarter(
	logger log.Logger,
	stateManager interfaces.AggregatorStateManager,
	election interfaces.AggregatorElection,
	candidateCollector interfaces.CandidateCollector,
	decisionCalculator interfaces.DecisionCalculator,
	blockSelector interfaces.BlockSelector,
	distanceSelector interfaces.DistanceSelector,
	resultDistributor interfaces.ResultDistributor,
	candidatePool mempool.CandidatePool,
	networkService netiface.Network,
	host node.Host,
	routingTableManager kademlia.RoutingTableManager,
) *aggregationStarter {
	return &aggregationStarter{
		logger:              logger,
		stateManager:        stateManager,
		election:            election,
		candidateCollector:  candidateCollector,
		decisionCalculator:  decisionCalculator,
		blockSelector:       blockSelector,
		distanceSelector:    distanceSelector,
		resultDistributor:   resultDistributor,
		candidatePool:       candidatePool,
		networkService:      networkService,
		host:                host,
		routingTableManager: routingTableManager,
	}
}

// processAggregationRound å¤„ç†åŒºå—èšåˆè½®æ¬¡ï¼ˆæ–°çš„ç»Ÿä¸€å…¥å£ï¼‰
//
// ğŸ¯ **æ–°çš„ç»Ÿä¸€å¤„ç†é€»è¾‘**ï¼š
// 1. èšåˆèŠ‚ç‚¹é€‰ä¸¾åˆ¤æ–­
// 2. éèšåˆèŠ‚ç‚¹ï¼šè½¬å‘ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
// 3. èšåˆèŠ‚ç‚¹ï¼šæ·»åŠ åˆ°å€™é€‰æ± å¹¶è§¦å‘èšåˆæµç¨‹
func (s *aggregationStarter) processAggregationRound(ctx context.Context, candidateBlock *block.Block) error {
	s.logger.Info("å¼€å§‹å¤„ç†åŒºå—èšåˆè½®æ¬¡")

	// 1. èšåˆèŠ‚ç‚¹é€‰ä¸¾åˆ¤æ–­
	height := candidateBlock.Header.Height
	s.logger.Infof("ğŸ” å¼€å§‹èšåˆå™¨é€‰ä¸¾åˆ¤æ–­ï¼ŒåŒºå—é«˜åº¦: %d", height)

	isAggregator, err := s.election.IsAggregatorForHeight(height)
	if err != nil {
		s.logger.Errorf("âŒ èšåˆå™¨é€‰ä¸¾å¤±è´¥: %v", err)
		return fmt.Errorf("aggregator election failed: %v", err)
	}

	if !isAggregator {
		// 2. ä¸æ˜¯èšåˆèŠ‚ç‚¹ï¼Œè½¬å‘ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
		s.logger.Infof("âŒ å½“å‰èŠ‚ç‚¹ä¸æ˜¯é«˜åº¦ %d çš„èšåˆèŠ‚ç‚¹ï¼Œè¿›è¡Œè½¬å‘", height)
		return s.forwardBlockToCorrectAggregator(ctx, candidateBlock)
	}

	// 3. æ˜¯èšåˆèŠ‚ç‚¹ï¼Œæ·»åŠ åˆ°å€™é€‰æ± å¹¶è§¦å‘èšåˆæµç¨‹
	s.logger.Infof("âœ… ç¡®è®¤ä¸ºé«˜åº¦ %d çš„èšåˆèŠ‚ç‚¹ï¼Œå¼€å§‹æœ¬åœ°å¤„ç†å€™é€‰åŒºå—", height)

	// æ·»åŠ åˆ°å€™é€‰æ± 
	blockHash, err := s.candidatePool.AddCandidate(candidateBlock, string(s.host.ID()))
	if err != nil {
		return fmt.Errorf("failed to add candidate to pool: %v", err)
	}
	s.logger.Infof("å€™é€‰åŒºå—å·²æ·»åŠ åˆ°å€™é€‰æ± ï¼Œå“ˆå¸Œ: %s", blockHash[:8])

	// è§¦å‘ABSèšåˆæµç¨‹
	return s.executeABSAggregationFlow(ctx, height)

}

// forwardBlockToCorrectAggregator è½¬å‘åŒºå—ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
func (s *aggregationStarter) forwardBlockToCorrectAggregator(ctx context.Context, candidateBlock *block.Block) error {
	height := candidateBlock.Header.Height

	// è·å–è¯¥é«˜åº¦çš„æ­£ç¡®èšåˆèŠ‚ç‚¹
	targetAggregator, err := s.election.GetAggregatorForHeight(height)
	if err != nil {
		return fmt.Errorf("failed to get aggregator for height %d: %v", height, err)
	}

	// ğŸ”’ ä¸¥æ ¼å®‰å…¨æ£€æŸ¥ï¼šéªŒè¯ç›®æ ‡èšåˆå™¨æ˜¯å¦æ”¯æŒåŒºå—æäº¤åè®®
	supported, err := s.networkService.CheckProtocolSupport(ctx, targetAggregator, protocols.ProtocolBlockSubmission)

	// âŒ åè®®æ£€æŸ¥å¤±è´¥ - æ‹’ç»å‘é€ï¼Œå¯èƒ½æ˜¯å¤–éƒ¨èŠ‚ç‚¹æˆ–ç½‘ç»œé—®é¢˜
	if err != nil {
		s.logger.Errorf("ğŸš« åè®®æ£€æŸ¥å¤±è´¥ï¼Œæ‹’ç»å‘èŠ‚ç‚¹ %s å‘é€åŒºå—æ•°æ®: %v", targetAggregator, err)
		return fmt.Errorf("protocol check failed for aggregator %s: %v - refusing to send block data to potentially incompatible node", targetAggregator, err)
	}

	// âŒ èŠ‚ç‚¹ä¸æ”¯æŒåè®® - è¿™æ˜¯å¤–éƒ¨èŠ‚ç‚¹ï¼Œéœ€è¦æ¸…ç†å¹¶æ‹’ç»
	if !supported {
		s.logger.Errorf("ğŸš« èŠ‚ç‚¹ %s ä¸æ”¯æŒåè®® %sï¼Œè¿™æ˜¯å¤–éƒ¨èŠ‚ç‚¹ï¼æ­£åœ¨ä»Kæ¡¶ä¸­ç§»é™¤...",
			targetAggregator, protocols.ProtocolBlockSubmission)

		// ğŸ§¹ ä»Kæ¡¶ä¸­ç§»é™¤ä¸å…¼å®¹çš„å¤–éƒ¨èŠ‚ç‚¹
		if err := s.routingTableManager.RemovePeer(targetAggregator); err != nil {
			s.logger.Warnf("ä»Kæ¡¶ç§»é™¤å¤–éƒ¨èŠ‚ç‚¹ %s å¤±è´¥: %v", targetAggregator, err)
		} else {
			s.logger.Infof("âœ… æˆåŠŸä»Kæ¡¶ç§»é™¤å¤–éƒ¨èŠ‚ç‚¹: %s", targetAggregator)
		}

		return fmt.Errorf("external node %s does not support protocol %s - removed from routing table to prevent future selection",
			targetAggregator, protocols.ProtocolBlockSubmission)
	}

	// âœ… åè®®æ£€æŸ¥é€šè¿‡
	s.logger.Debugf("âœ… å·²éªŒè¯èšåˆå™¨ %s æ”¯æŒåè®®: %s", targetAggregator, protocols.ProtocolBlockSubmission)

	// æ„å»º MinerBlockSubmission æ¶ˆæ¯
	submission := &protocol.MinerBlockSubmission{
		Base: &protocol.BaseMessage{
			MessageId:     generateMessageID(),
			SenderId:      []byte(s.host.ID()),
			TimestampUnix: time.Now().Unix(),
		},
		CandidateBlock:   candidateBlock,
		MinerPeerId:      []byte(s.host.ID()),
		MiningDifficulty: candidateBlock.Header.Difficulty,
		ParentHash:       candidateBlock.Header.PreviousHash,
		RelayHopLimit:    1,
	}

	// åºåˆ—åŒ–æ¶ˆæ¯
	reqBytes, err := proto.Marshal(submission)
	if err != nil {
		// ğŸ” åºåˆ—åŒ–å¤±è´¥è°ƒè¯•ä¿¡æ¯
		s.logger.Errorf("ğŸš« MinerBlockSubmissionåºåˆ—åŒ–å¤±è´¥ - height=%d, error=%v", height, err)
		return fmt.Errorf("failed to serialize submission: %v", err)
	}

	// ğŸ” åºåˆ—åŒ–æˆåŠŸè°ƒè¯•ä¿¡æ¯
	s.logger.Debugf("âœ… MinerBlockSubmissionåºåˆ—åŒ–æˆåŠŸ - height=%d, size=%d, target=%s", height, len(reqBytes), targetAggregator)

	// å‘é€ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
	_, err = s.networkService.Call(ctx, targetAggregator, protocols.ProtocolBlockSubmission, reqBytes, nil)
	if err != nil {
		return fmt.Errorf("network call failed to %s: %v", targetAggregator, err)
	}

	s.logger.Infof("æˆåŠŸè½¬å‘åŒºå—ç»™èšåˆèŠ‚ç‚¹: %s", targetAggregator)
	return nil
}

// executeABSAggregationFlow æ‰§è¡ŒABSèšåˆæµç¨‹
func (s *aggregationStarter) executeABSAggregationFlow(ctx context.Context, height uint64) error {
	// 2. çŠ¶æ€è½¬æ¢ï¼šListening
	if err := s.stateManager.TransitionTo(types.AggregationStateListening); err != nil {
		return err
	}
	if err := s.stateManager.SetCurrentHeight(height); err != nil {
		return err
	}

	// 3. çŠ¶æ€è½¬æ¢ï¼šCollecting - å¯åŠ¨å›ºå®šæ”¶é›†çª—å£
	//
	// ğŸ¯ **å›ºå®šæ”¶é›†çª—å£ç­–ç•¥**ï¼š
	// - ä»æ¥æ”¶ç¬¬ä¸€ä¸ªå€™é€‰åŒºå—å¼€å§‹ï¼Œå¯åŠ¨å›ºå®šæ—¶é—´çª—å£
	// - çª—å£æœŸé—´æ”¶é›†æ‰€æœ‰åˆ°è¾¾çš„å€™é€‰åŒºå—
	// - çª—å£ç»“æŸåç«‹å³è¿›è¡Œé€‰æ‹©ï¼Œä¸ç­‰å¾…æ›´å¤šå€™é€‰
	// - ç›®æ ‡ï¼šç»™è¶³å¤Ÿæ—¶é—´è®©å„çŸ¿å·¥çš„å€™é€‰åŒºå—åˆ°è¾¾èšåˆå™¨
	if err := s.stateManager.TransitionTo(types.AggregationStateCollecting); err != nil {
		return err
	}

	// å›ºå®šæ”¶é›†çª—å£æ—¶é—´ï¼ˆå¯é…ç½®ï¼‰
	collectionDuration := 10 * time.Second // é»˜è®¤10ç§’æ”¶é›†çª—å£
	// TODO: ä»é…ç½®ä¸­è·å– collectionDuration = s.config.Aggregator.CollectionWindowDuration

	err := s.candidateCollector.StartCollectionWindow(height, collectionDuration)
	if err != nil {
		return err
	}

	s.logger.Infof("ğŸ• å›ºå®šæ”¶é›†çª—å£å·²å¯åŠ¨ï¼š%vï¼Œé«˜åº¦: %d", collectionDuration, height)

	// 4. ç­‰å¾…æ”¶é›†çª—å£ç»“æŸå¹¶è·å–æ‰€æœ‰å€™é€‰åŒºå—
	candidates, err := s.candidateCollector.CloseCollectionWindow(height)
	if err != nil {
		return err
	}

	s.logger.Infof("âœ… æ”¶é›†çª—å£ç»“æŸï¼Œå…±æ”¶é›†åˆ° %d ä¸ªå€™é€‰åŒºå—", len(candidates))

	// 5. çŠ¶æ€è½¬æ¢ï¼šEvaluating - XORè·ç¦»è®¡ç®—
	if err := s.stateManager.TransitionTo(types.AggregationStateEvaluating); err != nil {
		return err
	}

	// è·å–çˆ¶åŒºå—å“ˆå¸Œä½œä¸ºè·ç¦»è®¡ç®—åŸºå‡†
	parentBlockHash, err := s.getParentBlockHash(height)
	if err != nil {
		return fmt.Errorf("failed to get parent block hash: %v", err)
	}

	// è®¡ç®—æ‰€æœ‰å€™é€‰åŒºå—çš„XORè·ç¦»
	distanceResults, err := s.distanceSelector.CalculateDistances(ctx, candidates, parentBlockHash)
	if err != nil {
		return fmt.Errorf("failed to calculate distances: %v", err)
	}

	s.logger.Info("å€™é€‰åŒºå—è·ç¦»è®¡ç®—å®Œæˆ")

	// 6. çŠ¶æ€è½¬æ¢ï¼šSelecting - é€‰æ‹©è·ç¦»æœ€è¿‘çš„åŒºå—
	if err := s.stateManager.TransitionTo(types.AggregationStateSelecting); err != nil {
		return err
	}

	selected, err := s.distanceSelector.SelectClosestBlock(ctx, distanceResults)
	if err != nil {
		return fmt.Errorf("failed to select closest block: %v", err)
	}

	s.logger.Info("æœ€ä¼˜åŒºå—é€‰æ‹©å®Œæˆ")

	// 7. ç”Ÿæˆè·ç¦»é€‰æ‹©è¯æ˜ï¼ˆç»™å…¨ç½‘å…¶ä»–èŠ‚ç‚¹éªŒè¯ç”¨ï¼‰
	distanceProof, err := s.distanceSelector.GenerateDistanceProof(ctx, selected, distanceResults, parentBlockHash)
	if err != nil {
		return fmt.Errorf("failed to generate distance proof: %v", err)
	}

	s.logger.Info("è·ç¦»é€‰æ‹©è¯æ˜ç”Ÿæˆå®Œæˆ")

	// 8. çŠ¶æ€è½¬æ¢ï¼šDistributing - ç«‹å³åˆ†å‘ç»“æœ
	//
	// ğŸ¯ **å›ºå®šåˆ†å‘æ—¶æœºç­–ç•¥**ï¼š
	// - æ”¶é›†çª—å£ç»“æŸåç«‹å³é€‰æ‹©æœ€ä¼˜åŒºå—å¹¶åˆ†å‘
	// - ä¸åŸºäºåŒºå—æ—¶é—´æˆ³è¿›è¡Œä»»ä½•ç­‰å¾…
	// - ä¸è€ƒè™‘æœ€å°åŒºå—é—´éš”ï¼ˆç”±çŸ¿å·¥ä¾§éš¾åº¦è°ƒæ•´æ§åˆ¶ï¼‰
	// - ç›®æ ‡ï¼šç¡®ä¿ç½‘ç»œåŠæ—¶è·å¾—èšåˆç»“æœï¼Œä¿æŒé“¾çš„æ´»è·ƒæ€§
	if err := s.stateManager.TransitionTo(types.AggregationStateDistributing); err != nil {
		return err
	}

	// è®¡ç®—çœŸå®çš„å€™é€‰æ•°é‡å’Œè·ç¦»å€¼ä½œä¸ºè¯„åˆ†
	totalCandidates := uint32(len(distanceResults))
	finalScore := 1.0 // è·ç¦»é€‰æ‹©ä¸éœ€è¦å¤æ‚è¯„åˆ†ï¼Œä½¿ç”¨å›ºå®šå€¼

	// åˆ›å»ºæ ‡å‡†æ ¼å¼çš„é€‰æ‹©è¯æ˜
	selectionProof := &types.SelectionProof{
		SelectedCandidate:   selected,
		SelectionReason:     "XORè·ç¦»é€‰æ‹©",
		SelectionTimestamp:  distanceProof.GeneratedAt,
		AllCandidatesHash:   fmt.Sprintf("%x", distanceProof.DistanceSummary),
		ScoresHash:          fmt.Sprintf("%x", distanceProof.ProofHash),
		AggregatorSignature: []byte{}, // æš‚æ—¶ç•™ç©ºï¼Œç­‰å¾…ç­¾åç³»ç»Ÿé›†æˆ
		AggregatorID:        s.host.ID(),
		BlockHeight:         height,
		ProofHash:           fmt.Sprintf("%x", distanceProof.ProofHash),
	}

	// ç«‹å³åˆ†å‘é€‰æ‹©ç»“æœï¼Œä¸ç­‰å¾…æ—¶é—´æˆ³
	err = s.resultDistributor.DistributeSelectedBlock(ctx, selected, selectionProof, totalCandidates, finalScore)
	if err != nil {
		return fmt.Errorf("failed to distribute selected block: %v", err)
	}

	s.logger.Info("ç»“æœåˆ†å‘å®Œæˆ")

	// 9. çŠ¶æ€è½¬æ¢ï¼šIdle - èšåˆå®Œæˆï¼Œå›åˆ°ç©ºé—²çŠ¶æ€
	if err := s.stateManager.TransitionTo(types.AggregationStateIdle); err != nil {
		return err
	}

	s.logger.Info("ABSèšåˆæµç¨‹å®Œæˆ")
	return nil
}

// generateMessageID ç”Ÿæˆå”¯ä¸€æ¶ˆæ¯ID
func generateMessageID() string {
	return fmt.Sprintf("msg_%d_%s", time.Now().UnixNano(), "aggregator")
}

// startAggregatorService å¯åŠ¨èšåˆå™¨æœåŠ¡
func (s *aggregationStarter) startAggregatorService(ctx context.Context) error {
	s.logger.Info("å¯åŠ¨èšåˆå™¨æœåŠ¡")

	// æ£€æŸ¥å½“å‰çŠ¶æ€
	currentState := s.stateManager.GetCurrentState()
	if currentState != types.AggregationStateIdle {
		return errors.New("èšåˆå™¨æœåŠ¡å·²åœ¨è¿è¡Œæˆ–å¤„äºå¼‚å¸¸çŠ¶æ€")
	}

	// ä¿æŒåœ¨ç©ºé—²çŠ¶æ€ï¼Œç­‰å¾…èšåˆè½®æ¬¡è§¦å‘
	s.logger.Info("èšåˆå™¨æœåŠ¡å·²å¯åŠ¨ï¼Œç­‰å¾…èšåˆè½®æ¬¡")
	return nil
}
