package orchestrator_test

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"

	consensusconfig "github.com/weisyn/v1/internal/config/consensus"
	blocktestutil "github.com/weisyn/v1/internal/core/block/testutil"
	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	"github.com/weisyn/v1/internal/core/consensus/miner/orchestrator"
	"github.com/weisyn/v1/internal/core/consensus/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== executeMiningRound æµ‹è¯•ï¼ˆé€šè¿‡ ExecuteMiningRoundï¼‰ ====================

// TestExecuteMiningRound_WithValidPreconditions_ExecutesSuccessfully æµ‹è¯•æœ‰æ•ˆå‰ç½®æ¡ä»¶æ—¶æ‰§è¡ŒæˆåŠŸ
func TestExecuteMiningRound_WithValidPreconditions_ExecutesSuccessfully(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()

	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	// è®¾ç½®é“¾é«˜åº¦ï¼Œè®©ç¡®è®¤æ£€æŸ¥èƒ½å¤ŸæˆåŠŸ
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1,
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})

	blockBuilder := &MockInternalBlockBuilder{}
	candidateBlock := &core.Block{
		Header: &core.BlockHeader{
			Version:      1,
			Height:       1,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			StateRoot:    make([]byte, 32),
			Timestamp:    1000,
			Difficulty:   1,
			Nonce:        make([]byte, 8),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{},
		},
	}
	blockBuilder.SetCandidateBlock(candidateBlock)

	service := createTestOrchestratorServiceWithBuilder(t, types.MinerStateActive, chainQuery, blockBuilder)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// ç”±äºä½¿ç”¨äº†Mockå¯¹è±¡ï¼Œå¯èƒ½ä¼šå› ä¸ºä¾èµ–é—®é¢˜è¿”å›é”™è¯¯
	// ä¸»è¦æµ‹è¯•ä¸ä¼španicï¼Œå¹¶ä¸”èƒ½åœ¨è¶…æ—¶å‰å®Œæˆ
	if err != nil {
		// å…è®¸æŸäº›é”™è¯¯ï¼Œä½†ä¸åº”è¯¥å¡ä½
		t.Logf("ExecuteMiningRoundè¿”å›é”™è¯¯ï¼ˆé¢„æœŸï¼‰: %v", err)
	}
}

// TestExecuteMiningRound_WithInactiveState_ReturnsError æµ‹è¯•éæ´»è·ƒçŠ¶æ€æ—¶è¿”å›é”™è¯¯
func TestExecuteMiningRound_WithInactiveState_ReturnsError(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	service := createTestOrchestratorServiceWithState(t, types.MinerStateIdle)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å‰ç½®æ¡ä»¶æ£€æŸ¥å¤±è´¥")
}

// TestExecuteMiningRound_WithSyncingState_ReturnsError æµ‹è¯•åŒæ­¥çŠ¶æ€æ—¶è¿”å›é”™è¯¯
func TestExecuteMiningRound_WithSyncingState_ReturnsError(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	service := createTestOrchestratorServiceWithState(t, types.MinerStateSyncing)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å‰ç½®æ¡ä»¶æ£€æŸ¥å¤±è´¥")
}

// TestExecuteMiningRound_WithStaleData_ReturnsError æµ‹è¯•æ•°æ®ä¸æ–°é²œæ—¶è¿”å›é”™è¯¯
func TestExecuteMiningRound_WithStaleData_ReturnsError(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        0,
		BestBlockHash: nil,
		IsReady:       false, // é“¾æœªå°±ç»ª
		Status:        "normal",
	})
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å‰ç½®æ¡ä»¶æ£€æŸ¥å¤±è´¥")
}

// ==================== checkPreconditions æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•ï¼‰ ====================

// TestCheckPreconditions_WithAllValid_ReturnsNil æµ‹è¯•æ‰€æœ‰æ¡ä»¶æœ‰æ•ˆæ—¶è¿”å›nil
func TestCheckPreconditions_WithAllValid_ReturnsNil(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act - é€šè¿‡ExecuteMiningRoundé—´æ¥æµ‹è¯•checkPreconditions
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// å¦‚æœcheckPreconditionsé€šè¿‡ï¼Œä¸ä¼šè¿”å›å‰ç½®æ¡ä»¶é”™è¯¯
	if err != nil {
		assert.NotContains(t, err.Error(), "å‰ç½®æ¡ä»¶æ£€æŸ¥å¤±è´¥")
	}
}

// ==================== createCandidateBlock æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•ï¼‰ ====================

// TestCreateCandidateBlock_WithValidBuilder_ReturnsBlock æµ‹è¯•æœ‰æ•ˆæ„å»ºå™¨æ—¶è¿”å›åŒºå—
func TestCreateCandidateBlock_WithValidBuilder_ReturnsBlock(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1,
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act - é€šè¿‡ExecuteMiningRoundé—´æ¥æµ‹è¯•createCandidateBlock
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// å¦‚æœcreateCandidateBlockæˆåŠŸï¼Œä¸ä¼šè¿”å›åˆ›å»ºå€™é€‰åŒºå—é”™è¯¯
	if err != nil {
		assert.NotContains(t, err.Error(), "åˆ›å»ºå€™é€‰åŒºå—å¤±è´¥")
	}
}

// TestCreateCandidateBlock_WithBuilderError_ReturnsError æµ‹è¯•æ„å»ºå™¨é”™è¯¯æ—¶è¿”å›é”™è¯¯
func TestCreateCandidateBlock_WithBuilderError_ReturnsError(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	blockBuilder := &MockInternalBlockBuilder{}
	blockBuilder.SetCreateError(assert.AnError)
	service := createTestOrchestratorServiceWithBuilder(t, types.MinerStateActive, chainQuery, blockBuilder)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ›å»ºå€™é€‰åŒºå—å¤±è´¥")
}

// ==================== executePoWComputation æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•ï¼‰ ====================

// TestExecutePoWComputation_WithValidCandidate_ReturnsMinedBlock æµ‹è¯•æœ‰æ•ˆå€™é€‰åŒºå—æ—¶è¿”å›æŒ–å‡ºçš„åŒºå—
func TestExecutePoWComputation_WithValidCandidate_ReturnsMinedBlock(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1,
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act - é€šè¿‡ExecuteMiningRoundé—´æ¥æµ‹è¯•executePoWComputation
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// å¦‚æœexecutePoWComputationæˆåŠŸï¼Œä¸ä¼šè¿”å›PoWè®¡ç®—é”™è¯¯
	if err != nil {
		assert.NotContains(t, err.Error(), "PoWè®¡ç®—å¤±è´¥")
	}
}

// ==================== checkHeightGate æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•ï¼‰ ====================

// TestCheckHeightGate_WithValidHeight_ReturnsNil æµ‹è¯•æœ‰æ•ˆé«˜åº¦æ—¶è¿”å›nil
func TestCheckHeightGate_WithValidHeight_ReturnsNil(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1,
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act - é€šè¿‡ExecuteMiningRoundé—´æ¥æµ‹è¯•checkHeightGate
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// å¦‚æœcheckHeightGateé€šè¿‡ï¼Œä¸ä¼šè¿”å›é«˜åº¦é—¨é—¸é”™è¯¯
	if err != nil {
		assert.NotContains(t, err.Error(), "é«˜åº¦é—¨é—¸æ£€æŸ¥å¤±è´¥")
	}
}

// TestCheckHeightGate_WithForkBack_ReturnsError æµ‹è¯•åˆ†å‰å›é€€æ—¶è¿”å›é”™è¯¯
func TestCheckHeightGate_WithForkBack_ReturnsError(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1, // å½“å‰é«˜åº¦å°äºå·²å¤„ç†é«˜åº¦
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})
	heightGateService := &MockHeightGateManager{}
	heightGateService.SetLastProcessedHeight(2) // å·²å¤„ç†é«˜åº¦å¤§äºå½“å‰é«˜åº¦
	blockBuilder := &MockInternalBlockBuilder{}
	service := createTestOrchestratorServiceWithHeightGate(t, types.MinerStateActive, chainQuery, heightGateService, blockBuilder)

	// Act
	err := service.ExecuteMiningRound(ctx)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "é«˜åº¦é—¨é—¸æ£€æŸ¥å¤±è´¥")
}

// ==================== validateBlockCompliance æµ‹è¯•ï¼ˆé—´æ¥æµ‹è¯•ï¼‰ ====================

// TestValidateBlockCompliance_WithNilPolicy_SkipsValidation æµ‹è¯•nilç­–ç•¥æ—¶è·³è¿‡éªŒè¯
func TestValidateBlockCompliance_WithNilPolicy_SkipsValidation(t *testing.T) {
	// Arrange
	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()
	chainQuery := &MockChainQuery{}
	chainQuery.SetIsFresh(true)
	chainQuery.SetChainInfo(&types.ChainInfo{
		Height:        1,
		BestBlockHash: make([]byte, 32),
		IsReady:       true,
		Status:        "normal",
	})
	service := createTestOrchestratorServiceWithChainQuery(t, types.MinerStateActive, chainQuery)

	// Act - é€šè¿‡ExecuteMiningRoundé—´æ¥æµ‹è¯•validateBlockCompliance
	err := service.ExecuteMiningRound(ctx)

	// Assert
	// å¦‚æœvalidateBlockComplianceè·³è¿‡éªŒè¯ï¼Œä¸ä¼šè¿”å›åˆè§„éªŒè¯é”™è¯¯
	if err != nil {
		assert.NotContains(t, err.Error(), "åˆè§„éªŒè¯å¤±è´¥")
	}
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestExecuteMiningRound_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestExecuteMiningRound_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestExecuteMiningRound_DetectsTemporaryImplementations æµ‹è¯•å‘ç°ä¸´æ—¶å®ç°
func TestExecuteMiningRound_DetectsTemporaryImplementations(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä¸´æ—¶å®ç°
	t.Logf("âœ… ExecuteMiningRoundå®ç°æ£€æŸ¥ï¼š")
	t.Logf("  - executeMiningRoundåè°ƒæ•´ä¸ªæŒ–çŸ¿æµç¨‹")
	t.Logf("  - checkPreconditionsæ£€æŸ¥å‰ç½®æ¡ä»¶ï¼ˆçŠ¶æ€ã€åŒæ­¥ã€é«˜åº¦é—¨é—¸ï¼‰")
	t.Logf("  - createCandidateBlockä»BlockBuilderè·å–å€™é€‰åŒºå—")
	t.Logf("  - executePoWComputationå§”æ‰˜ç»™PoWå¤„ç†å™¨")
	t.Logf("  - validateBlockComplianceè¿›è¡Œåˆè§„éªŒè¯ï¼ˆåŒé‡ä¿é™©ï¼‰")
	t.Logf("  - submitMinedBlockæäº¤æŒ–å‡ºçš„åŒºå—")
	t.Logf("  - waitForConfirmationç­‰å¾…ç¡®è®¤")
}

// ==================== è¾…åŠ©å‡½æ•° ====================

// createTestOrchestratorServiceWithState ä½¿ç”¨æŒ‡å®šçš„çŠ¶æ€åˆ›å»ºæµ‹è¯•ç”¨çš„ç¼–æ’å™¨æœåŠ¡
func createTestOrchestratorServiceWithState(t *testing.T, state types.MinerState) interfaces.MiningOrchestrator {
	chainQuery := &MockChainQuery{}
	return createTestOrchestratorServiceWithChainQuery(t, state, chainQuery)
}

// createTestOrchestratorServiceWithChainQuery ä½¿ç”¨æŒ‡å®šçš„é“¾æŸ¥è¯¢åˆ›å»ºæµ‹è¯•ç”¨çš„ç¼–æ’å™¨æœåŠ¡
func createTestOrchestratorServiceWithChainQuery(t *testing.T, state types.MinerState, chainQuery *MockChainQuery) interfaces.MiningOrchestrator {
	blockBuilder := &MockInternalBlockBuilder{}
	return createTestOrchestratorServiceWithBuilder(t, state, chainQuery, blockBuilder)
}

// createTestOrchestratorServiceWithBuilder ä½¿ç”¨æŒ‡å®šçš„æ„å»ºå™¨åˆ›å»ºæµ‹è¯•ç”¨çš„ç¼–æ’å™¨æœåŠ¡
func createTestOrchestratorServiceWithBuilder(t *testing.T, state types.MinerState, chainQuery *MockChainQuery, blockBuilder *MockInternalBlockBuilder) interfaces.MiningOrchestrator {
	return createTestOrchestratorServiceWithHeightGate(t, state, chainQuery, &MockHeightGateManager{}, blockBuilder)
}

// createTestOrchestratorServiceWithHeightGate ä½¿ç”¨æŒ‡å®šçš„é«˜åº¦é—¨é—¸åˆ›å»ºæµ‹è¯•ç”¨çš„ç¼–æ’å™¨æœåŠ¡
func createTestOrchestratorServiceWithHeightGate(t *testing.T, state types.MinerState, chainQuery *MockChainQuery, heightGateService *MockHeightGateManager, blockBuilder *MockInternalBlockBuilder) interfaces.MiningOrchestrator {
	logger := &testutil.MockLogger{}
	blockProcessor := &MockBlockProcessor{}
	queryService := testutil.NewMockQueryService()
	cacheStore := testutil.NewMockMemoryStore()
	powHandlerService := &testutil.MockPoWComputeHandler{}
	stateManagerService := &MockMinerStateManager{}
	stateManagerService.SetState(state)
	syncService := &MockForkHandler{}
	networkService := &testutil.MockNetwork{}
	aggregatorController := &testutil.MockAggregatorController{}
	incentiveCollector := &testutil.MockIncentiveCollector{}
	minerConfig := &consensusconfig.MinerConfig{
		ConfirmationTimeout:       1 * time.Second,        // æµ‹è¯•ä¸­ä½¿ç”¨è¾ƒçŸ­çš„è¶…æ—¶æ—¶é—´
		ConfirmationCheckInterval: 100 * time.Millisecond, // æµ‹è¯•ä¸­ä½¿ç”¨è¾ƒçŸ­çš„æ£€æŸ¥é—´éš”
	}
	consensusOptions := &consensusconfig.ConsensusOptions{
		Aggregator: consensusconfig.AggregatorConfig{
			EnableAggregator: true,
		},
	}

	service := orchestrator.NewMiningOrchestratorService(
		logger,
		blockBuilder,
		blockProcessor,
		chainQuery,
		queryService,
		cacheStore,
		powHandlerService,
		heightGateService,
		stateManagerService,
		syncService,
		networkService,
		aggregatorController,
		incentiveCollector,
		minerConfig,
		consensusOptions,
		nil,
		blocktestutil.NewDefaultMockConfigProvider(),
		&allowAllQuorumChecker{},
	)

	return service
}
