// produce_block.go å®ç°ä»å€™é€‰æ¨¡æ¿ç”Ÿæˆå®Œæ•´åŒºå—çš„å…·ä½“é€»è¾‘
//
// ğŸ—ï¸ **åŒºå—ç”Ÿæˆå’ŒPoWè®¡ç®—æµç¨‹å®ç°**
//
// æœ¬æ–‡ä»¶å®ç°ï¼š
// - å€™é€‰åŒºå—æ¨¡æ¿éªŒè¯å’Œå¤„ç†
// - ç±»å‹å®‰å…¨æ£€æŸ¥å’Œè½¬æ¢
// - å¤šçº¿ç¨‹PoWè®¡ç®—è°ƒç”¨
// - å®Œæ•´åŒºå—ç»„è£…å’ŒéªŒè¯
// - åŒºå—å®Œæ•´æ€§å’Œä¸€è‡´æ€§æ£€æŸ¥
package pow_handler

import (
	"bytes"
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/blockchain/block/transaction"
	"google.golang.org/protobuf/proto"
)

// produceBlockFromTemplate ä»å€™é€‰æ¨¡æ¿ç”Ÿæˆå®Œæ•´åŒºå—çš„å…·ä½“å®ç°
func (s *PoWComputeService) produceBlockFromTemplate(ctx context.Context, candidateBlock interface{}) (interface{}, error) {
	s.logger.Info("å¼€å§‹ä»æ¨¡æ¿ç”ŸæˆåŒºå—")

	// 1. ç±»å‹éªŒè¯å’Œè½¬æ¢
	block, err := s.validateAndConvertTemplate(candidateBlock)
	if err != nil {
		return nil, fmt.Errorf("æ¨¡æ¿éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. æ£€æŸ¥å¼•æ“è¿è¡ŒçŠ¶æ€
	if !s.IsRunning() {
		return nil, fmt.Errorf("PoWå¼•æ“æœªå¯åŠ¨ï¼Œè¯·å…ˆå¯åŠ¨çŸ¿å·¥æœåŠ¡")
	}

	// 3. é¢„å¤„ç†åŒºå—æ¨¡æ¿
	processedBlock, err := s.preprocessBlockTemplate(block)
	if err != nil {
		return nil, fmt.Errorf("é¢„å¤„ç†åŒºå—æ¨¡æ¿å¤±è´¥: %w", err)
	}

	// 4. æ‰§è¡ŒPoWè®¡ç®—
	minedBlock, err := s.performBlockMining(ctx, processedBlock)
	if err != nil {
		return nil, fmt.Errorf("åŒºå—æŒ–çŸ¿å¤±è´¥: %w", err)
	}

	// 5. åå¤„ç†å’ŒéªŒè¯
	finalBlock, err := s.postprocessMinedBlock(minedBlock)
	if err != nil {
		return nil, fmt.Errorf("åå¤„ç†æŒ–çŸ¿ç»“æœå¤±è´¥: %w", err)
	}

	// 6. å®Œæ•´æ€§éªŒè¯
	if err := s.validateCompleteBlock(finalBlock); err != nil {
		return nil, fmt.Errorf("å®Œæ•´æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	s.logger.Info("ä»æ¨¡æ¿ç”ŸæˆåŒºå—å®Œæˆ")
	return finalBlock, nil
}

// validateAndConvertTemplate éªŒè¯å’Œè½¬æ¢å€™é€‰æ¨¡æ¿
func (s *PoWComputeService) validateAndConvertTemplate(candidateBlock interface{}) (*core.Block, error) {
	// ç±»å‹æ–­è¨€ï¼šä»…æ”¯æŒ *core.Block
	block, ok := candidateBlock.(*core.Block)
	if !ok {
		return nil, fmt.Errorf("ä¸æ”¯æŒçš„å€™é€‰åŒºå—ç±»å‹ï¼Œä»…æ”¯æŒ *core.Blockï¼Œå®é™…ç±»å‹: %T", candidateBlock)
	}

	// åŸºç¡€æœ‰æ•ˆæ€§æ£€æŸ¥
	if block == nil {
		return nil, fmt.Errorf("åŒºå—ä¸èƒ½ä¸ºç©º")
	}

	if block.Header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	// åŒºå—å¤´å…³é”®å­—æ®µæ£€æŸ¥
	if block.Header.Version == 0 {
		return nil, fmt.Errorf("åŒºå—ç‰ˆæœ¬å·ä¸èƒ½ä¸º0")
	}

	if len(block.Header.PreviousHash) == 0 {
		return nil, fmt.Errorf("å‰åŒºå—å“ˆå¸Œä¸èƒ½ä¸ºç©º")
	}

	if len(block.Header.MerkleRoot) == 0 {
		return nil, fmt.Errorf("Merkleæ ¹ä¸èƒ½ä¸ºç©º")
	}

	if block.Header.Timestamp == 0 {
		return nil, fmt.Errorf("æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	if block.Header.Difficulty == 0 {
		return nil, fmt.Errorf("éš¾åº¦å€¼ä¸èƒ½ä¸º0ï¼Œè¯·æ£€æŸ¥åŒºå—åˆ›å»ºæµç¨‹")
	}

	// åŒºå—ä½“æ£€æŸ¥
	if block.Body == nil {
		return nil, fmt.Errorf("åŒºå—ä½“ä¸èƒ½ä¸ºç©º")
	}

	s.logger.Info("å€™é€‰åŒºå—æ¨¡æ¿éªŒè¯é€šè¿‡")
	return block, nil
}

// preprocessBlockTemplate é¢„å¤„ç†åŒºå—æ¨¡æ¿
func (s *PoWComputeService) preprocessBlockTemplate(block *core.Block) (*core.Block, error) {
	s.logger.Info("é¢„å¤„ç†åŒºå—æ¨¡æ¿")

	// åˆ›å»ºåŒºå—çš„æ·±æ‹·è´ï¼Œé¿å…ä¿®æ”¹åŸå§‹æ¨¡æ¿
	processedBlock := s.createBlockDeepCopy(block)

	// é‡ç½®nonceï¼ˆç¡®ä¿ä»0å¼€å§‹æŒ–çŸ¿ï¼‰
	processedBlock.Header.Nonce = make([]byte, 8) // 8å­—èŠ‚å…¨0

	// éªŒè¯Merkleæ ¹ï¼ˆç¡®ä¿ä¸äº¤æ˜“åˆ—è¡¨ä¸€è‡´ï¼‰
	if err := s.validateMerkleRoot(processedBlock); err != nil {
		return nil, fmt.Errorf("Merkleæ ¹éªŒè¯å¤±è´¥: %w", err)
	}

	// è®¾ç½®æŒ–çŸ¿å¼€å§‹æ—¶çš„æ—¶é—´æˆ³ï¼ˆå¯é€‰ï¼Œä¿æŒåŸæ—¶é—´æˆ³ï¼‰
	// processedBlock.Header.Timestamp = uint64(time.Now().Unix())

	s.logger.Info("åŒºå—æ¨¡æ¿é¢„å¤„ç†å®Œæˆ")
	return processedBlock, nil
}

// performBlockMining æ‰§è¡ŒåŒºå—æŒ–çŸ¿
func (s *PoWComputeService) performBlockMining(ctx context.Context, block *core.Block) (*core.Block, error) {
	s.logger.Info("å¼€å§‹åŒºå—æŒ–çŸ¿è®¡ç®—")

	// è°ƒç”¨å¤šçº¿ç¨‹æŒ–çŸ¿ç®—æ³•ï¼ˆå§”æ‰˜ç»™ mine_block_header.goï¼‰
	minedHeader, err := s.mineBlockHeader(ctx, block.Header)
	if err != nil {
		return nil, fmt.Errorf("åŒºå—å¤´æŒ–çŸ¿å¤±è´¥: %w", err)
	}

	// åˆ›å»ºæŒ–çŸ¿åçš„å®Œæ•´åŒºå—
	minedBlock := &core.Block{
		Header: minedHeader,
		Body:   block.Body, // ä¿æŒåŸå§‹åŒºå—ä½“ä¸å˜
	}

	s.logger.Info("åŒºå—æŒ–çŸ¿è®¡ç®—å®Œæˆ")
	return minedBlock, nil
}

// postprocessMinedBlock åå¤„ç†æŒ–çŸ¿åçš„åŒºå—
func (s *PoWComputeService) postprocessMinedBlock(minedBlock *core.Block) (*core.Block, error) {
	s.logger.Info("åå¤„ç†æŒ–çŸ¿åŒºå—")

	// éªŒè¯æŒ–çŸ¿ç»“æœ
	isValid, err := s.verifyBlockHeader(minedBlock.Header)
	if err != nil {
		return nil, fmt.Errorf("éªŒè¯æŒ–çŸ¿ç»“æœå¤±è´¥: %w", err)
	}

	if !isValid {
		return nil, fmt.Errorf("æŒ–çŸ¿ç»“æœPoWéªŒè¯å¤±è´¥")
	}

	// åˆ›å»ºæœ€ç»ˆåŒºå—ï¼ˆå†æ¬¡æ·±æ‹·è´ï¼Œç¡®ä¿æ•°æ®å®‰å…¨ï¼‰
	finalBlock := s.createBlockDeepCopy(minedBlock)

	s.logger.Info("æŒ–çŸ¿åŒºå—åå¤„ç†å®Œæˆ")
	return finalBlock, nil
}

// validateCompleteBlock éªŒè¯å®Œæ•´åŒºå—
func (s *PoWComputeService) validateCompleteBlock(block *core.Block) error {
	s.logger.Info("éªŒè¯å®Œæ•´åŒºå—")

	// 1. åŸºç¡€ç»“æ„éªŒè¯
	if block == nil || block.Header == nil || block.Body == nil {
		return fmt.Errorf("åŒºå—ç»“æ„ä¸å®Œæ•´")
	}

	// 2. PoWéªŒè¯
	isValid, err := s.verifyBlockHeader(block.Header)
	if err != nil {
		return fmt.Errorf("PoWéªŒè¯å‡ºé”™: %w", err)
	}

	if !isValid {
		return fmt.Errorf("PoWéªŒè¯å¤±è´¥")
	}

	// 3. Merkleæ ¹ä¸€è‡´æ€§éªŒè¯
	if err := s.validateMerkleRoot(block); err != nil {
		return fmt.Errorf("Merkleæ ¹éªŒè¯å¤±è´¥: %w", err)
	}

	// 4. åŒºå—å¤´å­—æ®µåˆç†æ€§æ£€æŸ¥
	if err := s.validateBlockHeaderFields(block.Header); err != nil {
		return fmt.Errorf("åŒºå—å¤´å­—æ®µéªŒè¯å¤±è´¥: %w", err)
	}

	s.logger.Info("å®Œæ•´åŒºå—éªŒè¯é€šè¿‡")
	return nil
}

// createBlockDeepCopy åˆ›å»ºåŒºå—çš„æ·±æ‹·è´
//
// ğŸ¯ **æ‹·è´ç›®çš„**ï¼š
// 1. **æ•°æ®éš”ç¦»**ï¼šé¿å…å¯¹åŸå§‹è¾“å…¥åŒºå—çš„æ„å¤–ä¿®æ”¹ï¼ˆç‰¹åˆ«æ˜¯nonceé‡ç½®ï¼‰
// 2. **çº¿ç¨‹å®‰å…¨**ï¼šç¡®ä¿å¹¶è¡ŒPoWè®¡ç®—æ—¶ä¸ä¼šäº’ç›¸å¹²æ‰°
// 3. **é˜²æ­¢æ•°æ®ç«äº‰**ï¼šé¿å…å¤šä¸ªæŒ–çŸ¿çº¿ç¨‹åŒæ—¶ä¿®æ”¹åŒä¸€åŒºå—å¯¹è±¡
//
// âš ï¸ **é‡è¦æ€§**ï¼š
// - åœ¨é¢„å¤„ç†é˜¶æ®µï¼šé¿å…ä¿®æ”¹åŸå§‹æ¨¡æ¿ï¼ˆç‰¹åˆ«æ˜¯nonceé‡ç½®ï¼‰
// - åœ¨åå¤„ç†é˜¶æ®µï¼šç¡®ä¿è¾“å‡ºæ•°æ®ä¸è¢«å¤–éƒ¨ä¿®æ”¹
func (s *PoWComputeService) createBlockDeepCopy(block *core.Block) *core.Block {
	if block == nil {
		return nil
	}

	// ä½¿ç”¨protobufçš„Cloneæ–¹æ³•è¿›è¡Œå®Œæ•´æ·±æ‹·è´
	// è¿™ç§æ–¹å¼æ›´å®‰å…¨ã€ç®€æ´ï¼Œä¸”èƒ½è‡ªåŠ¨å¤„ç†æ‰€æœ‰å­—æ®µï¼ˆåŒ…æ‹¬æœªæ¥æ–°å¢çš„ï¼‰
	blockCopy := proto.Clone(block).(*core.Block)

	return blockCopy
}

// validateMerkleRoot éªŒè¯Merkleæ ¹
func (s *PoWComputeService) validateMerkleRoot(block *core.Block) error {
	s.logger.Debug("å¼€å§‹éªŒè¯Merkleæ ¹")

	// 1. å‚æ•°æ ¡éªŒ
	if len(block.Header.MerkleRoot) != 32 {
		return fmt.Errorf("Merkleæ ¹é•¿åº¦åº”ä¸º32å­—èŠ‚ï¼Œå®é™…é•¿åº¦: %d", len(block.Header.MerkleRoot))
	}

	if s.merkleTreeManager == nil {
		return fmt.Errorf("MerkleTreeManageræœªæ³¨å…¥")
	}

	// 2. ç‰¹æ®Šæƒ…å†µï¼šæ²¡æœ‰äº¤æ˜“æ—¶
	if len(block.Body.Transactions) == 0 {
		// ç©ºåŒºå—çš„Merkleæ ¹åº”è¯¥æ˜¯å…¨é›¶
		emptyRoot := make([]byte, 32)
		if !bytes.Equal(block.Header.MerkleRoot, emptyRoot) {
			return fmt.Errorf("ç©ºåŒºå—çš„Merkleæ ¹åº”ä¸ºå…¨é›¶")
		}
		return nil
	}

	// 3. æ„å»ºäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
	transactionHashes, err := s.buildTransactionHashList(block.Body.Transactions)
	if err != nil {
		return fmt.Errorf("æ„å»ºäº¤æ˜“å“ˆå¸Œåˆ—è¡¨å¤±è´¥: %v", err)
	}

	// 4. ä½¿ç”¨MerkleTreeManageræ„å»ºMerkleæ ‘
	merkleTree, err := s.merkleTreeManager.NewMerkleTree(transactionHashes)
	if err != nil {
		return fmt.Errorf("æ„å»ºMerkleæ ‘å¤±è´¥: %v", err)
	}

	// 5. è·å–è®¡ç®—å‡ºçš„Merkleæ ¹
	calculatedRoot := merkleTree.GetRoot()
	if len(calculatedRoot) != 32 {
		return fmt.Errorf("è®¡ç®—å‡ºçš„Merkleæ ¹é•¿åº¦å¼‚å¸¸: %d", len(calculatedRoot))
	}

	// 6. æ¯”è¾ƒMerkleæ ¹
	if !bytes.Equal(block.Header.MerkleRoot, calculatedRoot) {
		s.logger.Errorf("Merkleæ ¹ä¸åŒ¹é…ï¼ŒæœŸæœ›: %x, å®é™…: %x",
			block.Header.MerkleRoot, calculatedRoot)
		return fmt.Errorf("Merkleæ ¹ä¸åŒ¹é…")
	}

	s.logger.Debug("Merkleæ ¹éªŒè¯æˆåŠŸ")
	return nil
}

// validateBlockHeaderFields éªŒè¯åŒºå—å¤´å­—æ®µåˆç†æ€§
func (s *PoWComputeService) validateBlockHeaderFields(header *core.BlockHeader) error {
	// ç‰ˆæœ¬å·æ£€æŸ¥
	if header.Version == 0 || header.Version > 1000 {
		return fmt.Errorf("åŒºå—ç‰ˆæœ¬å·å¼‚å¸¸: %d", header.Version)
	}

	// å“ˆå¸Œé•¿åº¦æ£€æŸ¥
	if len(header.PreviousHash) != 32 {
		return fmt.Errorf("å‰åŒºå—å“ˆå¸Œé•¿åº¦åº”ä¸º32å­—èŠ‚")
	}

	if len(header.MerkleRoot) != 32 {
		return fmt.Errorf("Merkleæ ¹é•¿åº¦åº”ä¸º32å­—èŠ‚")
	}

	// nonceé•¿åº¦æ£€æŸ¥
	if len(header.Nonce) != 8 {
		return fmt.Errorf("nonceé•¿åº¦åº”ä¸º8å­—èŠ‚")
	}

	// éš¾åº¦å€¼æ£€æŸ¥
	if header.Difficulty == 0 {
		return fmt.Errorf("éš¾åº¦å€¼ä¸èƒ½ä¸º0")
	}

	// æ—¶é—´æˆ³åˆç†æ€§æ£€æŸ¥ï¼ˆä¸èƒ½å¤ªæ—©æˆ–å¤ªæ™šï¼‰
	// currentTime := uint64(time.Now().Unix())
	// if header.Timestamp > currentTime + 300 { // ä¸èƒ½è¶…è¿‡å½“å‰æ—¶é—´5åˆ†é’Ÿ
	//     return fmt.Errorf("åŒºå—æ—¶é—´æˆ³è¿‡äºæœªæ¥: %d", header.Timestamp)
	// }

	return nil
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// buildTransactionHashList æ„å»ºäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//
// ğŸ¯ **äº¤æ˜“å“ˆå¸Œè®¡ç®—**
//
// ä¸ºMerkleæ ‘æ„å»ºå‡†å¤‡äº¤æ˜“å“ˆå¸Œåˆ—è¡¨ã€‚æ¯ä¸ªäº¤æ˜“é€šè¿‡Protobufåºåˆ—åŒ–å
// è®¡ç®—å“ˆå¸Œå€¼ï¼Œç¡®ä¿ä¸åŒºå—é“¾æ ‡å‡†å…¼å®¹ã€‚
//
// å‚æ•°ï¼š
//
//	transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›å€¼ï¼š
//
//	[][]byte: äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (s *PoWComputeService) buildTransactionHashList(transactions []*transaction.Transaction) ([][]byte, error) {
	transactionHashes := make([][]byte, len(transactions))

	for i, tx := range transactions {
		// åºåˆ—åŒ–äº¤æ˜“
		txBytes, err := proto.Marshal(tx)
		if err != nil {
			return nil, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“[%d]å¤±è´¥: %v", i, err)
		}

		// ä½¿ç”¨HashManagerè®¡ç®—çœŸæ­£çš„äº¤æ˜“å“ˆå¸Œ
		transactionHashes[i] = s.hashManager.SHA256(txBytes)
	}

	return transactionHashes, nil
}
